/*
  * keyspace.proto
  *
  * This source file is part of the FoundationDB open source project
  *
  * Copyright 2015-2025 Apple Inc. and the FoundationDB project authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */

syntax = "proto2";

package com.apple.foundationdb.record.provider.foundationdb.keyspace;
option java_outer_classname = "KeySpaceProto";

message DataInKeySpacePath {
  repeated KeySpacePathEntry path = 1;
  optional bytes remainder = 2;
  optional bytes value = 3;
}

// Entry representing logical values for a KeySpacePath entry.
message KeySpacePathEntry {
  optional string name = 1;

  // specific boolean to indicate this is supposed to be a null
  optional bool nullValue = 2;
  optional bytes bytesValue = 3;
  optional string stringValue = 4;
  optional int64 longValue = 5;
  optional float floatValue = 6;
  optional double doubleValue = 7;
  optional bool booleanValue = 8;
  optional UUID uuid = 9;

  message UUID { // TODO find out why we use fixed64 and not just int64
    // 2 64-bit fields is two tags, the same as 1 bytes field with a length of 16 would be.
    // fixed64 would be closer to how these are really used, but would fail the unsigned validator.
    optional sfixed64 most_significant_bits = 1;
    optional sfixed64 least_significant_bits = 2;
  }
}
